--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,10 @@ jobs:
     - stage: test
       name: Makefile unit tests
       script:
-        - docker build -t "$IMAGE_NAME" .
+        - |
+          CHANGED_FILES=($(git diff --name-only $TRAVIS_COMMIT_RANGE))
+          echo "$CHANGED_FILES"
+        # - docker build -t "$IMAGE_NAME" .
     - stage: deploy
       if: branch = master AND type = push AND repo = plus3it/tardigrade-ci
       before_script:
