--- a/tests/make/Makefile
+++ b/tests/make/Makefile
@@ -1,4 +1,5 @@
 export YAMLLINT_CONFIG := ../../.yamllint.yml
 export PROJECT_ROOT := ../../
+export BUILD_HARNESS_PATH := ../../
 
 -include ../../Makefile
